[Fix] -> Spacing top and bottom equalized for Navigation.

--- a/assets/css/unminified/skin-1-rtl.css
+++ b/assets/css/unminified/skin-1-rtl.css
@@ -282,7 +282,7 @@
 
 .comments-area {
   border-top: 1px solid #eeeeee;
-  margin-top: 1.35em;
+  margin-top: 1.2em;
   padding: 3em;
   /*  1 - Textarea Styles */
   /*  2 - Input Fields Styles */
