--- a/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
@@ -170,7 +170,7 @@
 
 .comments-area {
     border-top: 1px solid $color-border-content;
-    margin-top: 1.35em;
+    margin-top: 1.2em;
     padding: 3em;
     @media(max-width: $mx-col-xl) {
         padding: 3em;
